[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "approute-public-api-sdk"
dynamic = ["version"]
description = "Official Python SDK for AppRoute Public API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AppRoute", email = "dev@approute.io" }]
keywords = ["approute", "api", "sdk", "public-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.version]
path = "approute/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["approute"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["approute"]
omit = ["approute/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
